--- a/std.css
+++ b/std.css
@@ -1,2 +1,8 @@
 @import url("https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css");
 @import url("https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css");
+
+body, html {
+    margin: 0px;
+    padding: 0px;
+    height: 100vh;
+}
