--- a/reset.css
+++ b/reset.css
@@ -1,9 +1,5 @@
 body, html {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     height: 100vh;
-}
-
-body>footer, body>header, body>main {
-    padding: 0px;
 }
