--- a/minimize/reset.css
+++ b/minimize/reset.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    height: 100vh;
+}
+
 body>main {
     padding: 0;
     padding-left: 0;
