--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-body>footer, body>header, body>main {
-    padding-block: 0;
-    padding-left: 3rem;
-}
+@import url("https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css");
+@import url("https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css");
+
+@import url("style.css");
+@import url("reset.css");
