--- a/minimize/style.css
+++ b/minimize/style.css
@@ -19,3 +19,8 @@ main {
 .minimized {
     width: 60px;
 }
+
+body>footer, body>header, body>main {
+    padding-block: 0;
+    padding-left: 3rem;
+}
