--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -10,3 +10,8 @@ main div {
     color: white;
     margin: 10px;
 }
+
+body>footer, body>header, body>main {
+    padding-block: 0;
+    padding-left: 3rem;
+}
