--- a/minimize/style.css
+++ b/minimize/style.css
@@ -1,8 +1,6 @@
 main {
     display: flex;
     height: 100vh;
-    padding-block: 0;
-    padding-left: 0;
 }
 
 .grow-0 {
@@ -21,7 +19,6 @@ main {
     width: 60px;
 }
 
-body>footer, body>header {
-    padding-block: 0;
-    padding-left: 3rem;
+body>footer, body>header body>main {
+    padding: 0;
 }
