--- a/style.css
+++ b/style.css
@@ -5,5 +5,6 @@ body>footer, body>header, body>main {
 
 main {
     display: flex;
-    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
