--- a/style.css
+++ b/style.css
@@ -7,5 +7,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    flex-direction: column;
+    height: 70vh;
 }
