--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     height: 70vh;
+}
+
+main nav ul {
+    flex-direction: column;
 }
