--- a/map/src/style.css
+++ b/map/src/style.css
@@ -1,7 +1,19 @@
 /* animations */
 
 @keyframes mans {
-    
+    40% {
+        top: 295px;
+        left: 725px;
+    }
+
+    60% {
+        top: 400px;
+        left: 700px;
+    }
+    100% {
+        top: 745px;
+        left: 1070px;
+    }
 }
 
 @keyframes gondor {
@@ -102,7 +114,7 @@ body {
 /* use animations */
 
 #mans {
-    animation: mans 1s linear 1s 1 normal forwards;
+    animation: mans 13s linear 0s 1 normal forwards;
 }
 
 #mordor {
