--- a/absolute_example/src/style.css
+++ b/absolute_example/src/style.css
@@ -12,6 +12,14 @@
     color: white;
 }
 
+.relative-move {
+    position: relative;
+    background-color: red;
+    color: white;
+    top: 10px;
+    right: 10px;
+}
+
 .static-div {
     position: static;
     background-color: blue;
@@ -26,6 +34,6 @@
     height: 100vh;
 }
 
-.relative1 {
+.relative-father {
     position: relative;
 }
