--- a/sticky/src/reset.css
+++ b/sticky/src/reset.css
@@ -1,10 +1,11 @@
 * {
     box-sizing: border-box;
-    margin: 0;
+    margin: 10px6   ;
     padding: 0;
 }
 
 body, html {
+    position: sticky;
     height: 100vh;
 }
 
