--- a/form/src/style.css
+++ b/form/src/style.css
@@ -9,23 +9,29 @@ body>* {
 }
 
 .parent {
-    border: 1px solid black;
     padding: 10px;
+
+    color: black;
+    border: 1px solid black;
+    background-color: white;
 }
 
 .child {
     padding: 30px;
 
-    background-color: red;
     color: white;
+    border: 1px solid white;
+    background-color: red;
 }
 
 form {
     display: flex;
     flex-direction: column;
+    padding: 10px;
 
     border: 1px solid black;
-    padding: 10px;
+    background-color: white;
+    
 }
 
 form>*{
