--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
-body>footer, body>header, body>main {
-    padding-left: 3rem;
-    padding-block: 0;
+body > footer,
+body > header,
+body > main {
+  padding-left: 3rem;
+  padding-block: 0;
 }
 
 main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    height: 70vh;
+  display: flex;
+  align-items: left;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: 70vh;
 }
 
 main nav ul {
-    flex-direction: column;
-    align-items: baseline;
+  flex-direction: column;
+  align-items: baseline;
+}
+
+main details {
+  max-width: 400px;
 }
