--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@ main {
   align-items: left;
   justify-content: flex-start;
   flex-direction: column;
-  height: 70vh;
+  /* height: 70vh; */
+  padding: 2rem;
+}
+
+main > * {
+  margin: 1rem;
 }
 
 main nav ul {
