--- a/z-index-from/src/style.css
+++ b/z-index-from/src/style.css
@@ -4,6 +4,7 @@ body>* {
 
 .container {
     padding: 10px;
+    width: 75vw;
 
     border: 1px solid black;
     border-radius: 10px;
@@ -31,8 +32,13 @@ body>* {
     border-radius: 10px;
 
     position: absolute;
-    top: 50%;
-    left: 40%;
+    top: 1rem;
+    right: 1rem;
+
+    display: flex;
+    flex-direction: column;
+
+    max-width: 25vw;
 }
 
 #form>* {
