--- a/z-index-from/src/style.css
+++ b/z-index-from/src/style.css
@@ -1,10 +1,10 @@
 body>* {
-    margin: 0.5rem;
+    margin: 5px;
 }
 
 .container {
     padding: 10px;
-    width: 75vw;
+    width: calc(75vw - 30px);
 
     border: 1px solid black;
     border-radius: 10px;
@@ -38,7 +38,7 @@ body>* {
     display: flex;
     flex-direction: column;
 
-    max-width: 25vw;
+    max-width: calc(25vw - 30px);
 }
 
 #form>* {
