--- a/z-index-from/src/style.css
+++ b/z-index-from/src/style.css
@@ -4,7 +4,7 @@ body>* {
 
 .container {
     padding: 10px;
-    width: calc(75vw - 30px);
+    width: 100%;
 
     border: 1px solid black;
     border-radius: 10px;
@@ -28,19 +28,41 @@ body>* {
 #form {
     padding: 10px;
 
-    border: 1px solid black;
-    border-radius: 10px;
-
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-
     display: flex;
     flex-direction: column;
-
-    max-width: calc(25vw - 30px);
 }
 
 #form>* {
     margin: 5px;
+}
+
+dialog {
+    text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+dialog::backdrop {
+    position: static;
+    pointer-events: none;
+    backdrop-filter: blur(3px);
+}
+
+.close-button {
+    background: none;
+    color: red;
+    border: none;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+.open-button {
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
 }
