--- a/style.css
+++ b/style.css
@@ -21,8 +21,13 @@ main nav ul {
   flex-direction: column;
   align-items: baseline;
   list-style-type: none;
+  max-width: 400px;
 }
 
-main details {
+.list {
   max-width: 400px;
+}
+
+.list>ul li {
+  list-style-type: none;
 }
