--- a/z-index-from/src/style.css
+++ b/z-index-from/src/style.css
@@ -1,4 +1,4 @@
-body>* {
+body > * {
     margin: 5px;
 }
 
@@ -31,7 +31,7 @@ body>* {
     flex-direction: column;
 }
 
-#form>* {
+#form > * {
     margin: 5px;
 }
 
@@ -64,4 +64,52 @@ dialog::backdrop {
     border-radius: 10px;
     background-color: red;
     color: white;
+}
+
+input:not([type="color"]) {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input:not([type="color"]):focus {
+    outline: none;
+    border-color: #007bff;
+}
+
+input[type="color"] {
+    width: 100%;
+    padding: 0;
+    -webkit-appearance: none;
+    /* border: 1px solid #ccc; */
+    /* border-radius: 4px; */
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+    border: none;
+}
+
+/* input[type="color"]:focus {
+    outline: none;
+    border-color: #007bff;
+} */
+
+select {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+select:hover {
+    outline: none;
+    border-color: #007bff;
+}
+
+option {
+    padding: 10px;
 }
