--- a/z-index-from/src/style.css
+++ b/z-index-from/src/style.css
@@ -1,17 +1,32 @@
+/* Global styles for all elements */
 body > * {
     margin: 5px;
 }
 
+.part1 {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    background: blue;
+}
+
+#type {
+    /* width: 100%; */
+    color: white;
+    justify-self: center;
+    align-self: center;
+}
+
+/* Container styling */
 .container {
     padding: 10px;
-
     border: 1px solid black;
     border-radius: 10px;
 }
 
+/* Child element styling */
 .child {
     padding: 5px;
-
     border: 1px solid black;
     border-radius: 10px;
 }
@@ -20,13 +35,14 @@ body > * {
     border: 1px dashed black;
 }
 
+/* Hiding elements with 'none' class */
 .none {
     display: none;
 }
 
+/* Form styling */
 #form {
     padding: 10px;
-
     display: flex;
     flex-direction: column;
 }
@@ -35,8 +51,8 @@ body > * {
     margin: 5px;
 }
 
+/* Dialog styling */
 dialog {
-    text-align: center;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -49,25 +65,41 @@ dialog::backdrop {
     backdrop-filter: blur(3px);
 }
 
+/* Close button styling */
 .close-button {
     background: none;
     color: red;
     border: none;
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    top: 15px;
+    right: 15px;
 }
 
+/* Open button styling */
 .open-button {
     padding: 10px;
     border: none;
     border-radius: 10px;
-    background-color: red;
+    background-color: blue;
     color: white;
 }
 
+/* Form section styling */
+.part {
+    display: flex;
+    justify-content: space-between;
+}
+
+.part > * {
+    align-self: center;
+}
+
+.part > input {
+    margin-left: 10px;
+}
+
+/* Input field styling */
 input:not([type="color"]) {
-    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -79,29 +111,27 @@ input:not([type="color"]):focus {
 }
 
 input[type="color"] {
-    width: 100%;
+    width: 50%;
     padding: 0;
     -webkit-appearance: none;
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
     padding: 0;
+    width: 100%;
 }
 
 input[type="color"]::-webkit-color-swatch {
     border: none;
 }
 
-/* input[type="color"]:focus {
-    outline: none;
-    border-color: #007bff;
-} */
-
+/* Select box styling */
 select {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
+    width: 75%;
 }
 
 select:hover {
@@ -109,6 +139,6 @@ select:hover {
     border-color: #007bff;
 }
 
-option {
+select > option {
     padding: 10px;
 }
