--- a/z-index-from/src/style.css
+++ b/z-index-from/src/style.css
@@ -28,16 +28,15 @@ body > * {
     }
 
     .part {
-        display: flex;
-        justify-content: space-between;
-
+        width: 100%;
+/* display: flex; */
         * {
             align-self: center;
         }
 
         input {
-            margin-left: 10px;
-
+            width: 70%;
+            
             &:not([type="color"]) {
                 padding: 10px;
                 border: 1px solid #ccc;
@@ -49,18 +48,19 @@ body > * {
                 border-color: #007bff;
             }
 
-            &:has([type="color"]) {
+            &[type="color"] {
                 width: 50%;
                 padding: 0;
+                appearance: none;
                 -webkit-appearance: none;
             }
 
-            &:has([type="color"])::-webkit-color-swatch-wrapper {
+            &[type="color"]::-webkit-color-swatch-wrapper {
                 padding: 0;
                 width: 100%;
             }
 
-            &:has(input[type="color"])::-webkit-color-swatch {
+            &[type="color"]::-webkit-color-swatch {
                 border: none;
             }
         }
@@ -70,7 +70,7 @@ body > * {
             border: 1px solid #ccc;
             border-radius: 5px;
             background-color: #fff;
-            width: 75%;
+            width: 70%;
 
             & option {
                 padding: 10px;
@@ -80,6 +80,11 @@ body > * {
                 outline: none;
                 border-color: #007bff;
             }
+        }
+
+        label {
+            width: 25%;
+            text-align: right;
         }
     }
 
